--- a/Payment_Processing.Server/appsettings.json
+++ b/Payment_Processing.Server/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoConnection": {
+    "ConnectionString": "mongodb://localhost:27017",
+    //"ConnectionString": "https://mongodb+srv://theFreck:utKkPSt5F96Gv8R@mygoditsfullofstars.8ehgt.mongodb.net/",
+    "Database": "Account",
+    "CollectionName": "AccountsCollection"
+  }
 }
