--- a/payment_processing.client/package.json
+++ b/payment_processing.client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "mkcert": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
