--- a/payment_processing.client/package.json
+++ b/payment_processing.client/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
     "axios": "^0.24.0",
     "mkcert": "^3.2.0",
     "react": "^18.3.1",
