--- a/payment_processing.client/package.json
+++ b/payment_processing.client/package.json
@@ -18,7 +18,8 @@
     "axios": "^0.24.0",
     "mkcert": "^3.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
