--- a/payment_processing.client/package.json
+++ b/payment_processing.client/package.json
@@ -15,10 +15,11 @@
     "@mui/base": "^5.0.0-beta.61",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
-    "axios": "^0.24.0",
+    "axios": "^1.7.7",
     "mkcert": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
