--- a/.github/workflows/theFreckExchange.yml
+++ b/.github/workflows/theFreckExchange.yml
@@ -1,4 +1,4 @@
-name: Build and deploy .NET Core application to Web App theFreckExchange with API Management Service TheFreckExchangeServerapi-theFreckExchange
+name: Build and deploy .NET Core application to Web App theFreckExchange with API Management Service TheFreckExchangeServerapi-TheFreckExchangeServer
 on:
   push:
     branches:
@@ -7,10 +7,10 @@ env:
   AZURE_WEBAPP_NAME: theFreckExchange
   AZURE_WEBAPP_PACKAGE_PATH: TheFreckExchange.Server\publish
   AZURE_APIM_RESOURCE_PATH: /
-  AZURE_APIM_RESOURCEGROUP: DefaultResourceGroup-WUS2
+  AZURE_APIM_RESOURCEGROUP: rg-freckExchange
   AZURE_APIM_SERVICENAME: TheFreckExchangeServerapi
-  AZURE_APIM_API_ID: theFreckExchange
-  AZURE_APIM_APPSERVICEURL: https://thefreckexchange-cvgkagadbkcedyfm.canadacentral-01.azurewebsites.net
+  AZURE_APIM_API_ID: TheFreckExchangeServer
+  AZURE_APIM_APPSERVICEURL: https://thefreckexchange-cvgkagadbkcedyfm.westus2-01.azurewebsites.net
   SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION: 5.6.3
   SWASHBUCKLE_DOTNET_CORE_VERSION: 3.1.x
   API_IMPORT_SPECIFICATION_PATH: TheFreckExchange.Server\publish\swagger.json
@@ -64,7 +64,7 @@ jobs:
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-        publish-profile: ${{ secrets.theFreckExchange_5A8C }}
+        publish-profile: ${{ secrets.theFreckExchange_BF93 }}
     - name: Azure Login
       uses: azure/login@v1
       with:
