--- a/TheFreckExchange.Server/TheFreckExchange.Server.csproj
+++ b/TheFreckExchange.Server/TheFreckExchange.Server.csproj
@@ -13,11 +13,11 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.71" />
     <PackageReference Include="HtmlAgilityPack.CssSelectors" Version="1.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
-      <Version>8.*-*</Version>
+      <Version>9.0.0</Version>
     </PackageReference>
     <PackageReference Include="mongocsharpdriver" Version="2.30.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
