--- a/TheFreckExchange.Server/appsettings.json
+++ b/TheFreckExchange.Server/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "MongoConnection": {
     "ConnectionString": "mongodb://localhost:27017",
-    //"ConnectionString": "https://mongodb+srv://theFreck:utKkPSt5F96Gv8R@mygoditsfullofstars.8ehgt.mongodb.net/",
+    //"ConnectionString": "mongodb+srv://theFreck:utKkPSt5F96Gv8R@mygoditsfullofstars.8ehgt.mongodb.net/",
     "Database": "Store",
     "AccountCollectionName": "Accounts",
     "ProductCollectionName": "Products",
