broke image upload, pulled out hair, fixed image upload

--- a/TheFreckExchange.Server/appsettings.json
+++ b/TheFreckExchange.Server/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "MongoConnection": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "Database": "Store",
+    "ConnectionString": "mongodb+srv://theFreck:utKkPSt5F96Gv8R@mygoditsfullofstars.8ehgt.mongodb.net/",
+    "Database": "TheFreckExchange",
     "AccountCollectionName": "Accounts",
     "ProductCollectionName": "Products",
     "ItemCollectionName": "Items",
-    "ImageCollectionName":  "Images"
+    "ImageCollectionName": "Images"
   }
 }
