--- a/theFreckExchange.client/package.json
+++ b/theFreckExchange.client/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "payment_processing.client",
+  "name": "theFreckExchange.client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "./",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
