--- a/theFreckExchange.client/package.json
+++ b/theFreckExchange.client/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "theFreckExchange.client",
+  "name": "thefreckexchange.client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "./",
+  "homepage": "thefreckexchange-cvgkagadbkcedyfm.westus2-01.azurewebsites.net",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
