working on site configuration page

--- a/TheFreckExchange.Server/appsettings.json
+++ b/TheFreckExchange.Server/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "MongoConnection": {
-    "ConnectionString": "mongodb+srv://theFreck:utKkPSt5F96Gv8R@mygoditsfullofstars.8ehgt.mongodb.net/",
+    "ConnectionString": "mongodb://localhost:27017/",
     "Database": "TheFreckExchange",
     "AccountCollectionName": "Accounts",
     "ProductCollectionName": "Products",
