working on the config page

--- a/TheFreckExchange.Server/appsettings.json
+++ b/TheFreckExchange.Server/appsettings.json
@@ -12,6 +12,7 @@
     "AccountCollectionName": "Accounts",
     "ProductCollectionName": "Products",
     "ItemCollectionName": "Items",
-    "ImageCollectionName": "Images"
+    "ImageCollectionName": "Images",
+    "ConfigCollectionName": "Config"
   }
 }
