--- a/TheFreckExchange.Server/TheFreckExchange.Server.csproj
+++ b/TheFreckExchange.Server/TheFreckExchange.Server.csproj
@@ -7,10 +7,13 @@
     <SpaRoot>..\theFreckExchange.client</SpaRoot>
     <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
     <SpaProxyServerUrl>https://localhost:5173</SpaProxyServerUrl>
+    <UserSecretsId>f78937ec-00eb-4bb8-a9fb-2d0d070c5fb5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="1.1.2" />
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2" />
+    <PackageReference Include="Azure.Identity" Version="1.13.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.0.11</Version>
     </PackageReference>
@@ -22,6 +25,10 @@
     <ProjectReference Include="..\theFreckExchange.client\theFreckExchange.client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
 
 </Project>
