Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -40,4 +40,4 @@ steps:
   inputs:
     folderPath: '$(System.DefaultWorkingDirectory)/**/*.zip'
     enableXmlTransform: false
-    jsonTargetFiles: 'appsettings.json'
+    jsonTargetFiles: '*appsettings.json'
