--- a/TheFreckExchange.Server/appsettings.json
+++ b/TheFreckExchange.Server/appsettings.json
@@ -7,12 +7,15 @@
   },
   "AllowedHosts": "*",
   "MongoConnection": {
-    "ConnectionString": "mongodb://localhost:27017/",
+    "ConnectionString": "mongodb+srv://theFreck:utKkPSt5F96Gv8R@mygoditsfullofstars.8ehgt.mongodb.net/",
     "Database": "TheFreckExchange",
     "AccountCollectionName": "Accounts",
     "ProductCollectionName": "Products",
     "ItemCollectionName": "Items",
     "ImageCollectionName": "Images",
     "ConfigCollectionName": "Config"
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=f12cf0b2-f6fc-4800-9b67-ea790dd740b2;IngestionEndpoint=https://westus-0.in.applicationinsights.azure.com/;LiveEndpoint=https://westus.livediagnostics.monitor.azure.com/;ApplicationId=aa94d302-e09d-449c-b0b0-12fc34d3a011"
   }
 }
